--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Scam Guard</title>
+  <title>Scam Sentinel</title>
   <base href="/">
   <link href="https://fonts.googleapis.com/css?family=Audiowide|Roboto:300,400,500|Montserrat:500|Open+Sans" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
